# anki-code-highlighter

./: .bumpversion.toml  .envrc  .gitignore  .gitmodules  .ignore  .markdownlint.json  .python-version  .release-please-manifest.json  CHANGELOG.md  DEV.md  GEMINI.md  Justfile  Pipfile  README.md  TODO.md  ankiweb-readme.html  lefthook.yml  mypy.ini  package-lock.json  package.json  pygments  pyproject.toml  release-please-config.json  vulture_whitelist.py
.github/ISSUE_TEMPLATE/: bug_report.md  custom-issue.md
.github/workflows/: release-please.yml
.lefthook/pre-commit/: check-asset-version.py  format-files.bash
assets/: _ch-asset-version.txt  _ch-highlight-export.js  _ch-highlight.js  _ch-hljs-solarized.css  _ch-my-highlight.js  _ch-my-solarized.css  _ch-pygments-solarized.css  _ch-pygments-solarized.old.css  _gch-asset-version.txt  _gch-pygments-solarized.css
codehighlighter/: __init__.py  ankieditorextra.py  assets.py  bs4extra.py  clipboard.py  config.json  config.py  dialog.py  format.py  fuzzy_finder_dialog.py  guard.py  highlighter.py  hljs.py  hljslangs.py  html.py  listextra.py  main.py  manifest.json  media.py  migratev2.py  model.py  osextra.py  pygments_highlighter.py  pygmentsarm.py  serialization.py
codehighlighter/v2/: __init__.py  field.py  pygments_highlighter.py
screenshots/v2/: README.md
test/: in_memory_config.py  media.py  model.py  test_ankieditorextra.py  test_assets.py  test_bs4extra.py  test_dialog.py  test_field.py  test_format.py  test_fuzzy_finder_dialog.py  test_guard.py  test_highlighter.py  test_highlighter_hljs.py  test_highlighter_pygments.py  test_main.py  test_migratev2.py  test_migratev2_hljs_to_pygments_lang.py  test_migratev2_migrate_hljs_field.py  test_migratev2_migrate_hljs_tag.py  test_pygments_highlighter.py  test_serialization.py
test/testdata/: in1.html  out0.html  out1.html
tools/: extract-hljs-languages.js  generatepygmentscss.py  hljs.py  installhljs.py  pygmentsutils.py
