[project]
# Use 3.9, because that’s what Anki uses
# (https://github.com/ankitects/anki/blob/f6a3e98ac3dcb19d54e7fdbba96bf2fa15fc2b3f/docs/development.md?plain=1#L18).
requires-python = ">=3.9, <3.10"

[tool.poetry]
name = "anki-code-highlighter"
version = "24.12.0"
authors = ["Grzegorz Milka <grzegorzmilka@gmail.com>"]
description = "Anki plugin for code syntax highlighting"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
]
license = "AGPLv3"
readme = "README.md"
# We use Poetry only for the dependency management, not for packaging.
# This is because Anki plugins are distributed as zipped directories, not as wheels.
package-mode = false

[tool.poetry.urls]
Repository = "https://github.com/gregorias/anki-code-highlighter"

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
# https://pypi.org/project/anki/
anki = "==24.11"
# https://pypi.org/project/aqt/
aqt = "==24.11"
# Use the same version of PyQt6 as Anki:
# https://github.com/ankitects/anki/blob/c985acb9fe36d3651eb83cf4cfe44d046ec7458f/python/requirements.qt6_mac.txt
pyqt6 = "==6.6.1"
pyqt6-qt6 = "==6.6.2"
PyQt6-WebEngine = "==6.6.0"
PyQt6-WebEngine-qt6 = "==6.6.2"

[tool.poetry.group.dev.dependencies]
mypy = "*"
cssutils = "*"
types-beautifulsoup4 = "*"
webcolors = "*"
