[project]
# Use 3.9, because that’s what Anki uses
# (https://github.com/ankitects/anki/blob/f6a3e98ac3dcb19d54e7fdbba96bf2fa15fc2b3f/docs/development.md?plain=1#L18).
requires-python = ">=3.9, <3.10"

[tool.poetry]
name = "anki-code-highlighter"
version = "25.03.0"
authors = ["Grzegorz Milka <grzegorzmilka@gmail.com>"]
description = "Anki plugin for code syntax highlighting"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
]
license = "AGPLv3"
readme = "README.md"
# We use Poetry only for the dependency management, not for packaging.
# This is because Anki plugins are distributed as zipped directories, not as wheels.
package-mode = false

[tool.poetry.urls]
Repository = "https://github.com/gregorias/anki-code-highlighter"

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
# https://pypi.org/project/anki/
anki = "==25.02"
# https://pypi.org/project/aqt/
aqt = "==25.02"
# Use the same version of PyQt6 as Anki:
# https://github.com/ankitects/anki/blob/9b5da546be49f37c8d6c286e09c86074b2f0c278/python/requirements.qt6_6.in#L1
pyqt6 = "==6.6.1"
pyqt6-qt6 = "==6.6.2"
PyQt6-WebEngine = "==6.6.0"
PyQt6-WebEngine-qt6 = "==6.6.2"

[tool.poetry.group.dev.dependencies]
mypy = "*"
cssutils = "*"
types-beautifulsoup4 = "*"
webcolors = "*"
vulture = "^2.14"
coverage = "*"

[tool.vulture]
# StubClipboard is useful for testing.
ignore_names = ["StubClipboard"]
